# fv2

./: .env_example  .gitignore  AGENTS.md  Cargo.toml  PAID_CONTENT.md  PAID_CONTENT_ROADMAP.md  PIPELINE_API.md  aws-cli  bacon.toml  compose.yaml  cors.json  cryptowrap-openapi.json  deploy.sh  fevid-web.service  forward_port.sh  justfile  prod_compose.yaml  sync_static.sh  tmuxp-workspace.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20260609_052003_users.rs  m20260609_095907_videos.rs  m20260610_120444_content.rs  m20260618_184948_user_favorites.rs  m20260620_174420_user_purchases.rs  m20260623_143736_transactions.rs  m20260623_143739_notifications.rs  m20260702_072022_add_slug_string_to_content.rs
nginx-config/: nginx.conf
nginx-config/conf.d/: default.conf
nginx-config/ssl/: cert.crt  priv_nginx-ss.key
scripts/: backfill_slugs.py  cleanup.py  s3-integrity-check.md
src/: auth.rs  balance.rs  components.rs  content_edit.rs  cryptowrap.rs  currency.rs  favorites.rs  favourite.rs  gallery.rs  home.rs  main.rs  notifications.rs  pages.rs  payments.rs  pipeline.rs  profile.rs  purchase.rs  purchases.rs  s3.rs  settings.rs  sitemap.rs  slug.rs  upload.rs  upload_direct.rs  video.rs  view_counter.rs
src/entity/: content_items.rs  image_sets.rs  images.rs  mod.rs  notifications.rs  prelude.rs  sea_orm_active_enums.rs  transactions.rs  user_favorites.rs  user_purchases.rs  users.rs  video_formats.rs  videos.rs
static/: build-player.js  package.json  robots.txt
static/css/: balance.css  contact.css  content-edit.css  favorites.css  footer-page.css  galleries.css  gallery.css  index.css  notifications.css  privacy.css  processing.css  profile.css  purchased.css  settings.css  style.css  terms.css  upload-gallery.css  upload-video.css  video.css
static/js/: gallery-lazy.js  main.js  mobile.js  player.js  plyr.min.js  profile.js  upload-gallery.js  upload-video.js  vidstack.min.js  view-tracker.js
templates/: balance.html  base.html  contact.html  content-edit.html  content-processing.html  favorites.html  footer_page.html  galleries.html  gallery.html  index.html  notifications.html  privacy.html  profile.html  purchased.html  settings.html  terms.html  upload-gallery.html  upload-video.html  video.html
templates/components/: content-header.html  fav-gallery-card.html  fav-video-card.html  footer.html  pagination.html  payment-modal.html  purch-gallery-card.html  purch-video-card.html
templates/legal/: aup.html  compliance.html  contact.html  dmca.html  privacy.html  refund.html  terms.html
(+4 files in other folders)
