[package]
name = "fevid-V2"
version = "0.1.1"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.13.0"
argon2 = "0.5.3"
askama = "0.16.0"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
hex = "0.4.3"
image = "0.25.10"
log = "0.4.32"
mime_guess = "2.0.5"
rust-s3 = "0.37.2"
sea-orm = { version = "1.1.20", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "debug-print"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
webp = "0.3.1"
